--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "PORT=3000 node src/index.js",
+        "start": "PORT=5000 node src/index.js",
         "start-watch": "PORT=3000 nodemon src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "async": "^3.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -23,6 +24,7 @@
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
         "swagger-jsdoc": "^3.4.0",
+        "swagger-ui-dist": "^3.24.3",
         "swagger-ui-express": "^4.1.2"
     },
     "devDependencies": {
