--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "async": "^3.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
-        "foreachasync": "^5.1.3",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.5",
         "mongoose": "^5.7.13",
         "mongoose-unique-validator": "^2.0.3",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
+        "socket.io": "^2.3.0",
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
         "swagger-ui-express": "^4.1.2"
