--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.5",
         "mongoose": "^5.7.13",
         "mongoose-unique-validator": "^2.0.3",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "socket.io": "^2.3.0",
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
