--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "e-ecommerce-api",
+    "name": "fbtwm-xmas-api",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -30,6 +30,6 @@
         "swagger-ui-express": "^4.1.2"
     },
     "devDependencies": {
-        "nodemon": "^1.17.2"
+        "nodemon": "^1.19.4"
     }
 }
