--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.6",
+        "express-mongo-sanitize": "^1.3.2",
+        "express-rate-limit": "^5.0.0",
+        "helmet": "^3.21.2",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.5",
         "mongoose": "^5.7.13",
@@ -26,7 +29,8 @@
         "socket.io": "^2.3.0",
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
-        "swagger-ui-express": "^4.1.2"
+        "swagger-ui-express": "^4.1.2",
+        "xss-clean": "^0.1.1"
     },
     "devDependencies": {
         "nodemon": "^1.19.4"
