--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ticketing-platform",
+    "name": "insurance-platform",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.js",
@@ -30,6 +30,7 @@
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
         "swagger-ui-express": "^4.1.2",
+        "unirest": "^0.6.0",
         "xss-clean": "^0.1.1"
     },
     "devDependencies": {
