--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "swagger-ui-dist": "^3.24.3",
         "swagger-ui-express": "^4.1.2",
         "unirest": "^0.6.0",
+        "ussd-menu-builder": "^1.2.0",
         "xss-clean": "^0.1.1"
     },
     "devDependencies": {
