--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "mongodb": "^3.3.5",
         "mongoose": "^5.7.13",
         "mongoose-unique-validator": "^2.0.3",
+        "nodemailer": "^6.2.1",
         "socket.io": "^2.3.0",
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
