--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "src/index.js",
+    "engines": {
+      "node": "10.x"
+    },
     "scripts": {
         "start": "node src/index.js",
         "start-watch": "nodemon src/index.js",
@@ -22,10 +25,10 @@
         "helmet": "^3.21.2",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.5",
-        "mongoose": "^5.7.13",
+        "mongoose": "^5.13.5",
         "mongoose-unique-validator": "^2.0.3",
         "nodemailer": "^6.2.1",
-        "socket.io": "^2.3.0",
+        "socket.io": "^2.4.1",
         "swagger-jsdoc": "^3.4.0",
         "swagger-ui-dist": "^3.24.3",
         "swagger-ui-express": "^4.1.2",
